--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,10 +5,9 @@
 	tools:context=".MainActivity" >
 
 	<TextView
-		android:layout_width="wrap_content"
+		android:id="@+id/tv"
+		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
-		android:layout_centerHorizontal="true"
-		android:layout_centerVertical="true"
-		android:text="@string/hello_world" />
+		android:textSize="35dp" />
 
 </RelativeLayout>
